styles/styles.css
@import url("https://fonts.googleapis.com/css2?family=Acme&family=Permanent+Marker&family=Ranchers&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: Arial, Helvetica, sans-serif;
  line-height: 1.5rem;
}

.main {
  color: white;
  background-image: url(../img/mainbgb.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  font-family: "Acme", sans-serif;
  font-size: 3rem;
  line-height: 5rem;
  min-height: 100vh;
  padding: 80px;
  text-align: center;
  text-shadow: 5px 5px 5px black;
}
.main .maintitle {
  color: white;
  font-family: "Permanent Marker", cursive;
  font-size: 5rem;
  margin-bottom: 100px;
  text-shadow: 5px 5px 5px black;
}
.main p {
  margin-bottom: 40px;
}
@media (max-width: 768px) {
  .main {
    background-image: url(../img/mainbgs.jpg);
    min-height: 100vh;
    padding: 20px;
  }
  .main .maintitle {
    font-size: 3rem;
    line-height: 5rem;
    margin-bottom: 50px;
  }
  .main p {
    font-size: 1.5rem;
    text-shadow: 3px 3px 3px black;
    line-height: 3rem;
  }
}

.faq {
  padding: 30px 15px 80px;
  min-height: 100vh;
  text-decoration: none;
  background-color: #2d0470;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.faq .titleh2 {
  line-height: 5rem;
  text-align: center;
}
.faq .containerinfaq {
  max-width: 50vw;
  margin: auto;
}
.faq .questionanswer {
  background-color: rgba(255, 255, 255, 0.85);
  border: 0.5px solid white;
  box-shadow: 0 0 10px rgb(255, 255, 255);
  border-radius: 5px;
  color: black;
  display: grid;
  grid-template-columns: 50px 1fr;
  gap: 15px;
  margin-top: 20px;
  padding: 15px;
  text-align: justify;
}
.faq .questionanswer img {
  width: 80px;
  border-radius: 10%;
}
.faq .questionanswer strong,
.faq .questionanswer p {
  margin-left: 30px;
}
.faq .finalmessage {
  font-family: "Permanent Marker", cursive;
  margin-top: 80px;
  text-align: center;
  font-size: 4rem;
  line-height: 6rem;
  margin-bottom: 50px;
}
.faq .btnpresenca {
  background-color: #f3d148;
  color: black;
  min-width: max-content;
  height: max-content;
  justify-self: center;
  border-radius: 8px;
  padding: 15px;
  font-size: 1.5rem;
  font-weight: 600;
  cursor: pointer;
  border: white;
}
.faq .btnpresenca:hover {
  background-color: white;
  color: black;
  transition: 0.3s;
  box-shadow: 0px 0px 15px white;
}
@media (max-width: 768px) {
  .faq .titleh2 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
  .faq .containerinfaq {
    max-width: 100vw;
  }
  .faq .questionanswer {
    max-width: 100vw;
  }
  .faq .btnpresenca {
    font-size: 1.2rem;
  }
  .faq .finalmessage {
    font-family: "Permanent Marker", cursive;
    font-size: 2.5rem;
    line-height: 5rem;
    margin-top: 40px;
    text-align: center;
  }
}

.footer {
  background-color: black;
  color: white;
  min-height: 10vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 30px 5px 50px;
  text-align: center;
}
.footer h3 {
  margin-bottom: 20px;
  font-size: 1.5rem;
}

/*# sourceMappingURL=styles.css.map */

